opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_bench"
bug-reports: "https://github.com/janestreet/ppx_bench/issues"
dev-repo: "git+https://github.com/janestreet/ppx_bench.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_core"
  "ppx_driver"
  "ppx_inline_test"
  "ppx_metaquot"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Syntax extension for writing in-line benchmarks in ocaml code

Part of the Jane Street's PPX rewriters collection.
"
