opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_bench"
bug-reports: "https://github.com/janestreet/ppx_bench/issues"
dev-repo: "git+https://github.com/janestreet/ppx_bench.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "ppx_inline_test"
  "dune"            {>= "3.17.0"}
  "ppxlib"          {>= "0.33.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Syntax extension for writing in-line benchmarks in ocaml code"
description: "
Part of the Jane Street's PPX rewriters collection.
"
